--- a/ui/style.css
+++ b/ui/style.css
@@ -18,12 +18,12 @@ body {
 .img-medium {
     height: 200px;
 }
-.container {
+
+.container{
     max-width: 800px;
     margin: 0 auto;
-    color: grey;
-    font-family: BAZOOKA;
+    color: black;
+    padding-top: 60px;
     padding-left: 20px;
     padding-right: 20px;
-}  
-    
+}    
